# duckdb_s3

./: .gitignore  README.md  config.ini.template  hello.py  pyproject.toml
.dlt/: secrets.toml
airflow_prj/: requirements.txt
airflow_prj/.astro/: config.yaml
airflow_prj/dags/: duckdb_s3.py
airflow_prj/include/resources/: duckdb_s3.py
analysis/: analyze.ipynb
dagster_project/: pyproject.toml  setup.py
dagster_project/dagster_project/: assets.py  assets_duckdb_s3.py  definitions.py  resources_duckdb_s3.py
dagster_project/dagster_project/assets/: duckdb_s3.py
dagster_project/dagster_project/resources/: __init__.py  dlt_resources.py  duckdb_s3.py  marvel_api.py
dagster_project/tmpdd0hpc3_/history/: runs.db
dagster_project/tmpdd0hpc3_/history/runs/: 58584e26-1307-4128-a240-1ac092bcb3ce.db  780806e3-fa7a-4043-8c72-93bdae33eff4.db  b32e5cd7-1d4b-4e7f-be36-344c4f77db46.db  b78f547a-c77b-4f8e-a1c8-afeb1bef8a7d.db  c598847b-0590-4489-8983-5690bd88f0be.db  index.db
dagster_project/tmpdd0hpc3_/schedules/: schedules.db
dagster_project/tmpovwrltan/history/: runs.db
dagster_project/tmpovwrltan/history/runs/: 01a3a74e-3eb4-4390-960c-b77f6be96441.db  3d6213e5-5b28-48f0-80f9-0b2616bea61d.db  dfb5bd4b-1890-4327-9b13-afedf9971f5d.db  index.db
dagster_project/tmpovwrltan/schedules/: schedules.db
ingest/: data_lake_ingester.py  main.py
scripts/: data_lake_ingester.py  data_lake_transformer.py  main_agg.py  main_all.py  main_ingest.py  main_transform.py
