[project]
name = "duckdb-s3"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.35.44",
    "configparser>=7.1.0",
    "duckdb>=1.1.2",
    "ipykernel>=6.29.5",
    "loguru>=0.7.2",
    "pandas>=2.2.3",
    "pathlib>=1.0.1",
    "python-dotenv>=1.0.1",
    "requests>=2.32.3",
]
