[tool.poetry]
name = "duckdb-s3"
version = "0.1.0"
description = ""
authors = ["levyvix <levy.vix@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.12"
boto3 = "^1.35.54"
configparser = "^7.1.0"
dagster = "^1.9.0"
duckdb = "^1.1.2"
ipykernel = "^6.29.5"
loguru = "^0.7.2"
matplotlib = "^3.9.2"
pandas = "^2.2.3"
pathlib = "^1.0.1"
python-dotenv = "^1.0.1"
requests = "^2.32.3"
dlt = "^1.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
